# email-rag

./: .env.example  .gitignore  CLAUDE.md  QUICK_START.md  README.md  SYSTEM_TEST_REPORT.md  docker-compose.yml  integration_email_classification.py  integration_language_classification.py  integration_rag_indexing.py  integration_summarization.py  package.json
.claude/: settings.local.json
email-processor/: database.py  integration_00_email_processing.py  integration_01_email_classification.py  integration_02_language_classification.py  integration_03_rag_indexing.py  integration_04_summarization.py  language_classifier.py  main.py  models.py  pipeline_stats.py  processor.py  requirements.txt  resummary.py  test_processing.py  test_reply_parser.py  test_summarization.py  (+3 more)
scripts/: README.md  analyze_classification.py  analyze_mailboxes.py  conversation_viewer.py  deploy-permissions.sh  dev-setup.sh  email_rag_overview.py  mailbox_analysis_results.json  migrate-schema.sh  monitor_email_processor.sh  pipeline_monitor.py  pyproject.toml  requirements.txt  reset-dev.sh  restart_and_wait.sh  seed-database.sh  setup_env.py  trigger_processing.sh
services/email-processor/: .env.example  Cargo.toml  Dockerfile  Dockerfile.python-only  README.md  README_CLASSIFIER.md  check_classifier_health.py  classify.py  classify_worker.py  com.emailrag.classifier.plist  debug_model.py  deploy_classifier_macos.sh  docker-compose.worker.yml  email-classifier.service  email_classifier_worker.py  llm_classifier.py  llm_summarizer.py  main.py  models.py  processor.py  pyproject.toml  pyproject.toml.rust-backup  qwen_summarizer.py  requirements.txt  run_classifier.sh  setfit_classifier.py  simple_rule_classifier.py  start_dev.sh  test_classification.py  test_inbox_classification.py  test_llm_only_classification.py  test_model.py  threading_service.py  threading_worker.py  worker.py
services/email-processor/src/: lib.rs
services/email-processor/src/email_classifier.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+92 files in other folders)
