[package]
name = "email_parser_py"
version = "0.1.0"
edition = "2021"

[lib]
name = "email_parser_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
mail-parser = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
pyo3-build-config = "0.20"