[project]
name = "email-classifier"
version = "0.1.0"
description = "Email classification service"
requires-python = ">=3.10"
dependencies = [
    "llm>=0.15",
    "sqlalchemy>=2.0.35",
    "psycopg2-binary>=2.9.10",
    "email-reply-parser>=0.5.12",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"
